apps/firefly3/service-firefly3-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly3-app
  namespace: firefly3
spec:
  selector:
    app: firefly3-app
  ports:
    - port: 8080
      targetPort: 8080
